# web_server

./: CMakeLists.txt  Makefile  index.html  main.cpp  upload.html  webserv.conf
body_handler/: GetHandler.cpp  GetHandler.hpp  IBodyHandler.hpp  UploadBodyHandler.cpp  UploadBodyHandler.hpp
err_pages/: 404.html  405.html  411.html  413.html  414.html  500.html  504.html
network/: Server.cpp  Server.hpp  SocketHolder.cpp  SocketHolder.h
parsers/: ConfigParser.cpp  ConfigParser.h  HTTPRequest.cpp  HTTPRequest.hpp  HttpReqHeader.cpp  HttpReqHeader.hpp
parsing/: CfgCtx.hpp
process/: Handler.cpp  Handler.hpp  outfile.txt
resp_writer/: RespUtil.hpp  RespWriter.cpp  RespWriter.hpp
utils/: SharedPtr.hpp  utils.hpp
www/brainwave-html/js/: bootstrap.js
www/default/: cgi_post.html  index.html  upload.html
www/default/cgi-bin/: hello.cgi  hello.cpp  post.cpp
www/default/css/: style.css
www/default/error_pages/: 400.html  403.html  501.html  502.html  505.html
